# video_project_1

./: CMakeLists.txt  README.md
lib/FFmpeg/: CMakeLists.txt
src/: load_frame.cpp  main.cpp  video_reader.cpp  video_reader.hpp
